--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/ResultPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/ResultPanel.fxml
@@ -2,51 +2,61 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.ButtonBar?>
-<AnchorPane id="resultPanel" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ResultPanelUIController">
-    <children>
-        <HBox prefHeight="400.0" prefWidth="352.8" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <children>
-                <TableView fx:id="resultTable" tableMenuButtonVisible="true" HBox.hgrow="ALWAYS" />
-                <VBox fx:id="furtherAnalysisPanel" prefHeight="200.0" prefWidth="100.0">
-                    <children>
-                        <Label text="Further Analysis" />
-                        <TextField fx:id="secondsBefore" promptText="Sec before">
-                            <VBox.margin>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                            </VBox.margin>
-                        </TextField>
-                        <TextField fx:id="secondsAfter" promptText="Sec after">
-                            <VBox.margin>
-                                <Insets bottom="10.0" left="10.0" right="10.0" />
-                            </VBox.margin>
-                        </TextField>
-                        <Button mnemonicParsing="false" text="Search">
-                            <VBox.margin>
-                                <Insets left="10.0" right="10.0" />
-                            </VBox.margin>
-                        </Button>
-                    </children>
-                    <HBox.margin>
-                        <Insets left="5.0" />
-                    </HBox.margin>
-                    <ButtonBar prefHeight="40.0">
-                        <buttons>
-                            <Button fx:id="exportButton" mnemonicParsing="false" onAction="#exportResultTable" text="Exportieren" />
-                        </buttons>
-                        <VBox.margin>
-                            <Insets top="10.0" />
-                        </VBox.margin>
-                    </ButtonBar>
-                </VBox>
-            </children>
-        </HBox>
-    </children>
+
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ResultPanelUIController">
+   <children>
+      <VBox layoutY="300.0" prefHeight="118.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <TableView fx:id="resultTable" prefHeight="200.0" prefWidth="200.0" />
+            <ButtonBar prefHeight="40.0" prefWidth="200.0">
+              <buttons>
+                <Button fx:id="exportButton" mnemonicParsing="false" onAction="#exportResultTable" text="Export" />
+              </buttons>
+               <padding>
+                  <Insets right="10.0" />
+               </padding>
+            </ButtonBar>
+            <VBox fx:id="furtherAnalysisBox" alignment="BOTTOM_LEFT" prefHeight="50.0">
+               <children>
+                  <Label alignment="BOTTOM_LEFT" text="Further analysis">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0">
+                     <children>
+                        <Label text="Seconds before">
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </Label>
+                        <TextField fx:id="secondsBefore" prefWidth="50.0" />
+                        <Label text="Seconds after" />
+                        <TextField fx:id="secondsAfter" prefWidth="50.0" />
+                        <Button mnemonicParsing="false" text="Analyze" />
+                     </children>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin>
+                  </HBox>
+               </children>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+            </VBox>
+         </children>
+      </VBox>
+   </children>
 </AnchorPane>
