--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/ImportPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/ImportPanel.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -10,18 +12,19 @@
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" id="ImportPanel" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" fx:controller="ch.zhaw.jv19.loganalyzer.view.ImportPanelUIController">
    <children>
-      <GridPane layoutX="24.0" layoutY="24.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0">
+      <GridPane layoutX="24.0" layoutY="24.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="50.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.79998779296875" minWidth="0.0" prefWidth="105.20001220703125" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="485.6" minWidth="10.0" prefWidth="474.3999877929688" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="44.60001220703125" minHeight="0.0" prefHeight="30.599993896484378" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="98.8" minHeight="10.0" prefHeight="29.600012207031245" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="48.39999999999999" minHeight="10.0" prefHeight="32.79998779296875" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="41.600012207031256" minHeight="0.0" prefHeight="7.7999938964843665" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="88.79999389648438" minHeight="10.0" prefHeight="33.99997558593749" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="164.8000244140625" minHeight="10.0" prefHeight="147.19997558593747" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="36.80001220703127" minHeight="10.0" prefHeight="32.00002441406252" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
             <Label text="User" />
@@ -31,7 +34,13 @@
             <ComboBox fx:id="chooseSite" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ComboBox fx:id="chooseBusline" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Button fx:id="selectLogFiles" mnemonicParsing="false" onAction="#handleSelectedLogFiles" prefWidth="100.0" text="Select Log FIles" GridPane.rowIndex="4" />
-            <Button fx:id="importData" mnemonicParsing="false" onAction="#handleImportData" prefWidth="100.0" text="Import Data" GridPane.rowIndex="5" />
+            <Button fx:id="importData" mnemonicParsing="false" onAction="#handleImportData" prefWidth="100.0" text="Import Data" GridPane.rowIndex="6" />
+            <TableView minHeight="-Infinity" prefHeight="30.0" prefWidth="474.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+              <columns>
+                <TableColumn prefWidth="75.0" text="C1" />
+                <TableColumn prefWidth="75.0" text="C2" />
+              </columns>
+            </TableView>
          </children>
       </GridPane>
       <Label layoutX="14.0" layoutY="14.0" text="Define Meta Data:" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0" />
