--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportInspectionDialog.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/ReportInspectionDialog.fxml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportInspectionDialogUIController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.zhaw.jv19.loganalyzer.view.ReportInspectionDialogUIController">
     <children>
-        <!-- fx:id must correspond (controller name without "Controller") with name of controller, see https://riptutorial.com/javafx/example/7285/nested-controllers-->
-        <fx:include fx:id="reportResultPanelUI" source="ReportResultPanel.fxml" />
+      <VBox AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="20.0">
+         <children>
+            <HBox fx:id="resultPanelContainer" prefHeight="400.0" prefWidth="600.0" spacing="10.0" />
+         </children>
+      </VBox>
     </children>
 </AnchorPane>
