--- a/src/main/java/ch/zhaw/jv19/loganalyzer/view/BaseDataPanel.fxml
+++ b/src/main/java/ch/zhaw/jv19/loganalyzer/view/BaseDataPanel.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -20,49 +19,49 @@
                 <Tab text="Users">
                     <content>
                         <AnchorPane>
-                     <children>
-                        <SplitPane dividerPositions="0.5767138193688792" layoutY="7.0" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <children>
+                        <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <items>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                  <children>
-                                    <TableView fx:id="baseDataUserTable" layoutX="6.0" layoutY="6.0" prefHeight="206.0" prefWidth="598.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                      <columns>
-                                        <TableColumn prefWidth="75.0" text="C1" />
-                                      </columns>
-                                    </TableView>
+                                            <TableView fx:id="baseDataUserTable" prefHeight="206.0" prefWidth="598.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                </TableView>
                                  </children>
                               </AnchorPane>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="131.0" prefWidth="598.0">
                                  <children>
-                                    <GridPane layoutX="14.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="0.0">
+                                    <GridPane layoutX="5.0" layoutY="14.0" AnchorPane.bottomAnchor="-14.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="14.0">
                                       <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="289.4000244140625" minWidth="10.0" prefWidth="117.40002059936523" />
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="537.4000396728516" minWidth="10.0" prefWidth="375.99997940063474" />
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                       </columnConstraints>
                                       <rowConstraints>
+                                        <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                         <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                           <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                       </rowConstraints>
                                        <children>
-                                          <TextField fx:id="createdUser" prefHeight="20.0" prefWidth="376.0" GridPane.columnIndex="1" />
-                                          <TextField fx:id="name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                          <TextField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                          <TextField fx:id="isadmin" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                          <Label text="Created  User" />
-                                          <Label text="Name" GridPane.rowIndex="1" />
-                                          <Label text="Password" GridPane.rowIndex="2" />
-                                          <Label text="Admin 1/0" GridPane.rowIndex="3" />
-                                          <Button fx:id="submitt" mnemonicParsing="false" text="Submitt" GridPane.rowIndex="4" />
+                                          <Label text="Register New User:" />
+                                          <Label text="Created User" GridPane.rowIndex="1" />
+                                          <Label text="Name" GridPane.rowIndex="2" />
+                                          <Label text="Admint 1/0" GridPane.rowIndex="4" />
+                                          <Label text="Password" GridPane.rowIndex="3" />
+                                          <TextField fx:id="fieldCreatedUser" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <TextField fx:id="fieldName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <TextField fx:id="fieldPassword" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                          <TextField fx:id="fieldIsadmin" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                          <Button mnemonicParsing="false" onAction="#submitt" text="Submitt" GridPane.columnIndex="3" GridPane.rowIndex="4" />
                                        </children>
                                     </GridPane>
                                  </children>
                               </AnchorPane>
                           </items>
                         </SplitPane>
-                     </children>
+                            </children>
                         </AnchorPane>
                     </content>
                 </Tab>
